--- a/scss/_custom-settings.scss
+++ b/scss/_custom-settings.scss
@@ -35,7 +35,7 @@
 }
 
 // Variables
-$font-primary: 'Raleway', Arial, sans-serif;
+$font-primary: 'Ubuntu', Arial, sans-serif;
 $font-secondary: 'Open Sans', Arial, sans-serif;
 $brand-primary: #6a41ed;
 $brand-secondary: #49D292;
