--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,13 @@ body {
   color: #8b8e94;
   line-height: 28px;
   font-size: 15px;
-  font-family: "Raleway", Arial, sans-serif;
+  font-family: "Ubuntu", Arial, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: #181920;
   line-height: 1.5;
-  font-family: "Raleway", Arial, sans-serif;
+  font-family: "Ubuntu", Arial, sans-serif;
   font-weight: 300;
   margin: 0 0 30px 0;
 }
